--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://meikafreckelton.github.io/meikafreckelton.github.io",
   "name": "new-portfolio",
   "version": "0.1.0",
   "private": true,
