--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://meikafreckelton.github.io/meikafreckelton.github.io",
-  "name": "new-portfolio",
+  "homepage": "http://meikafreckelton.github.io/",
+  "name": "meikafreckelton.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
