--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://meikafreckelton.github.io/src",
+  "homepage": "http://meikafreckelton.github.io/public/index.html",
   "name": "meikafreckelton.github.io",
   "version": "0.1.0",
   "private": true,
