--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://meikafreckelton.github.io/meikafreckelton.github.io",
+  "homepage": "http://meikafreckelton.github.io/",
   "name": "meikafreckelton.github.io",
   "version": "0.1.0",
   "private": true,
@@ -20,9 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
